2008-01-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  More marshalling fixes.

2008-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Fix marshalling issues.

2008-01-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs:
	  In GetHistory(), There is no need to query the working revision, since
	  we can use the constant Rev.Working as start revision. It also fixes bug
	  #324571.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp:
	  Updated project files. The order of extended properties won't change
	  anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml:
	  Bump add-in versions.

2007-12-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.VersionControl.Subversion/Makefile.am: Fix trivial warning.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Use lazy initialisation rather than a static constructor. Log a message
	  to tell the user if the SVN add is disabled. Implement IDisposable in
	  addition to finaliser. Minor optimisation to release the LibSvnClient if
	  LibApr can't be loaded.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic: Updated.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs,