@@ -1,3 +1,8 @@
+2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.VersionControl/RevertCommand.cs: Notify file changes through
+	  the FileService.
+
 2008-01-16  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.VersionControl.Views/Statuses.cs: Removed colorize method. Not
